# Dissertation

./: CMakeLists.txt  README.md  automation.py  l2sb.hpp
Output/BONNEEG/: Bonn_EEG.csv
Output/test/: Datatest_UHC1.csv
TOOLS/: Gene.cpp  Gene.hpp  Genetics.hpp  l2sb.hpp  l2sb_real.hpp  maketest.txt  real.cpp  test  test.cpp
src/: Genetics.cpp  Genetics.hpp  ML2SB.cpp  ML2SB.hpp  l2sb.hpp  test.cpp  todo.txt
src/Current/: BandConfig.cpp  BandConfig.hpp  BinString.cpp  BinString.hpp  EncoderProtoType.cpp  EncoderProtoType.hpp  FileData.cpp  FileData.hpp  FitnessFunction.hpp  GeneralParameters.cpp  GeneralParameters.hpp  Genetics.cpp  Genetics.hpp  StackVector.hpp  Types.hpp  Utils.hpp  compile_time_values.inc  main.cpp  tests.cpp
src/Old/: test.cpp
